Closed
Bug 1203289
Opened 10 years ago
Closed 10 years ago
unmark gray the mGlobal fields of PromiseCallback subclasses
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla43
People
(Reporter: mccr8, Assigned: mccr8)
References
Details
Attachments
(1 file)
|
1.67 KB,
patch
|
bzbarsky
:
review+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
We're running code in the compartments of these globals without marking them as live to the CC, which might cause problems.
| Assignee | ||
Comment 1•10 years ago
|
||
It almost feels like we should do ExposeObjectToActiveJS on any object we call JSAutoCompartment with, though I do worry a little about the perf implications of that.
Comment 2•10 years ago
|
||
Well, wouldn't it be just moving unmarking from forgotSkippable to happen possibly at some other point? Things which are doing something in a loop would end up having unmarked objects already.
And IIRC the check whether something gray was inlined (but better to verify).
So, might not be too bad.
| Assignee | ||
Comment 3•10 years ago
|
||
try run: https://treeherder.mozilla.org/#/jobs?repo=try&revision=722d9211224f
I think bc4 is just permaorange on trunk...
Attachment #8659345 -
Flags: review?(bzbarsky)
Comment 4•10 years ago
|
||
Comment on attachment 8659345 [details] [diff] [review]
expose promise callback things to JS
r=me
Attachment #8659345 -
Flags: review?(bzbarsky) → review+
Comment 6•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
| Assignee | ||
Comment 7•10 years ago
|
||
Comment on attachment 8659345 [details] [diff] [review]
expose promise callback things to JS
Approval Request Comment
[Feature/regressing bug #]: speculative fix for bug 1182197
[User impact if declined]: crashes
[Describe test coverage new/current, TreeHerder]: this code is run frequently
[Risks and why]: might possibly cause leaks, but this is pretty simple and should be okay as we haven't noticed any yet
[String/UUID change made/needed]: none
Attachment #8659345 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 8•10 years ago
|
||
Comment on attachment 8659345 [details] [diff] [review]
expose promise callback things to JS
See above. This is beta now.
Attachment #8659345 -
Flags: approval-mozilla-aurora? → approval-mozilla-beta?
Updated•10 years ago
|
status-firefox42:
--- → affected
Comment 9•10 years ago
|
||
Comment on attachment 8659345 [details] [diff] [review]
expose promise callback things to JS
Hopefully fix a crash, taking it.
Attachment #8659345 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 10•10 years ago
|
||
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•