Bug 1203289 - PromiseCallback subclasses should unmark gray JS they run. r=bz, a=sylvestre